# wargames

./: .dockerignore  .gitignore  LICENSE  README.md  local.env.example  pyproject.toml  requirements.txt
.github/workflows/: wargames-ci.yml
agents/: circle-mouse.yaml  doom-controls.yaml  openai-quickstart.yaml  openai-smoke.yaml  scripted-wait.yaml
docker/base/: Dockerfile
docker/craftium/: Dockerfile
docker/doom/: Dockerfile
docker/flightgear/: Dockerfile
docker/freeciv/: Dockerfile
docker/ikemen/: Dockerfile
docker/linux/: Dockerfile
docker/mindustry/: Dockerfile
docker/naev/: Dockerfile
docker/opensurge/: Dockerfile
docker/quaver/: Dockerfile
docker/redalert/: Dockerfile
docker/supertux/: Dockerfile
docker/supertuxkart/: Dockerfile
docker/zeroad/: Dockerfile
docs/: add_a_game.md  architecture.md  lobby.md  probe.md  realtime.md  reward_profiles.md  rewards.md
docs/games/: craftium.md  doom.md  flightgear.md  freeciv.md  ikemen.md  mindustry.md  naev.md  opensurge.md  quaver.md  redalert.md  supertux.md  supertuxkart.md  zeroad.md
environments/prime/: CHANGELOG.md  Makefile  README.md  pyproject.toml  wargames
environments/prime/configs/: eval-debug.toml  rl-redalert-curriculum.toml  rl-redalert-dense.toml
environments/prime/configs/craftium/: eval-chop-tree.toml  rl-chop-tree.toml
environments/prime/configs/doom/: eval-map01.toml  rl-map01.toml
environments/prime/configs/flightgear/: eval-c172p-takeoff.toml  rl-c172p-takeoff.toml
environments/prime/configs/freeciv/: eval-duel.toml  eval-earth-small.toml  rl-duel.toml  rl-earth-small.toml
environments/prime/configs/ikemen/: eval-kfm.toml  rl-kfm.toml
environments/prime/configs/mindustry/: eval-veins.toml  rl-veins.toml
environments/prime/configs/naev/: eval-tutorial.toml  rl-tutorial.toml
environments/prime/configs/opensurge/: eval-sunshine-1.toml  rl-sunshine-1.toml
environments/prime/configs/quaver/: eval-crossover-beginner.toml  rl-crossover-beginner.toml
environments/prime/configs/redalert/: eval-soviet-01.toml  rl-soviet-01.toml
environments/prime/configs/supertux/: eval-welcome-antarctica.toml  rl-welcome-antarctica.toml
environments/prime/configs/supertuxkart/: eval-lighthouse.toml  rl-lighthouse.toml
environments/prime/configs/zeroad/: eval-arcadia.toml  rl-arcadia.toml
environments/prime/scripts/: check_source_archive.py
environments/prime/tests/conformance/: test_env.py
environments/wargames-openreward/: CHANGELOG.md  Dockerfile  Makefile  OPENREWARD.toml  README.md  pyproject.toml
environments/wargames-openreward/tests/conformance/: test_env.py
environments/wargames-openreward/wargames_openreward/: __init__.py  app.py  env_redalert.py  variants.py
environments/wargames-prime/: Makefile  README.md  pyproject.toml  wargames_prime.py
environments/wargames-prime/configs/: eval-test.toml
environments/wargames-prime/tests/conformance/: __init__.py  test_env.py
examples/agents/: circle_mouse.py  doom_controls.py  streaming_ws_client.py  wait_agent.py
scenarios/craftium/profiles/: standard.yaml
scenarios/doom/profiles/: standard.yaml
scenarios/flightgear/profiles/: standard.yaml
scenarios/freeciv/profiles/: standard.yaml
scenarios/ikemen/profiles/: standard.yaml
scenarios/mindustry/profiles/: standard.yaml
scenarios/naev/profiles/: standard.yaml
scenarios/opensurge/profiles/: standard.yaml
scenarios/quaver/profiles/: standard.yaml
scenarios/redalert/profiles/: aggressive_stress_test.yaml  dense.yaml  protective.yaml  speedrun.yaml  standard.yaml  terminal.yaml
scenarios/supertux/profiles/: standard.yaml
scenarios/supertuxkart/profiles/: standard.yaml
scenarios/zeroad/profiles/: standard.yaml
scripts/: demo.py  install_doom_probe.sh  install_opensurge_probe.sh  install_probe.sh  install_quaver_probe.sh  install_supertux_probe.sh  install_supertuxkart_probe.sh  linux_box.sh  verify_injector.py
tests/: test_cli.py
tests/core/: support.py  test_config.py  test_errors.py  test_repr.py
tests/core/backend/: test_base.py
tests/core/capture/: test_audio.py  test_capture.py  test_window.py
tests/core/control/: test_cua_actions.py  test_injector_mock.py  test_injector_xtest.py  test_lower_cua.py  test_tools.py
tests/core/missions/: test_catalog.py  test_registry.py  test_rewards.py  test_rubric.py  test_spec.py
tests/core/process/: test_launcher.py
tests/core/runtime/: test_actions_dispatch.py  test_arena_context.py  test_mission.py
tests/core/stream/: test_x11.py
tests/core/transport/: __init__.py
tests/environments/: test_native.py
tests/episode/: test_serialization.py
tests/evaluation/: __init__.py  test_profiles.py  test_task_catalog.py
tests/games/craftium/: __init__.py  test_backend.py  test_missions.py  test_rewards.py  test_world.py
tests/games/doom/: test_backend.py  test_missions.py  test_process.py  test_rewards.py  test_world.py
tests/games/flightgear/: test_backend.py  test_missions.py  test_process.py
tests/games/freeciv/: test_backend.py  test_missions.py  test_process.py  test_world.py
tests/games/ikemen/: __init__.py  test_missions.py  test_process.py  test_rewards.py  test_world.py
tests/games/mindustry/: __init__.py  test_backend.py  test_missions.py  test_world.py
tests/games/naev/: test_missions.py  test_probe.py  test_process.py  (+2 more)
tests/harness/: test_agent_specs.py  test_lobby_runner.py  test_runner.py  test_turns.py
wargames/: __init__.py  __main__.py  cli.py
wargames/core/: config.py  errors.py
wargames/environments/: __init__.py  actions.py  native.py  openreward.py  prime.py
wargames/episode/: __init__.py  controller.py  evaluator.py  media.py  recorder.py  serialization.py
wargames/evaluation/: __init__.py  profile.py  profile_loader.py  schema.py  splits.py  task.py
wargames/export/: cli.py
wargames/games/: registry.py
wargames/harness/: __init__.py  agent.py  agent_loader.py  agent_spec.py  builtin_agents.py  lobby.py  openai_agent.py  runner.py  turns.py
wargames/observe/: hud.py  layout.py  replay.py
wargames/runs/: __init__.py  bus.py
(+1948 files in other folders)
