[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layerbrain-wargames"
version = "0.1.2"
description = "Defense-aligned RTS environment for Prime Intellect Verifiers."
requires-python = ">=3.11"
authors = [{ name = "Layerbrain", email = "brain@layerbrain.com" }]
dependencies = [
  "datasets>=4.6.1",
  "verifiers>=0.1.12",
  "wargames @ git+https://github.com/layerbrain/wargames.git@main",
]

[project.entry-points."verifiers.environments"]
"wargames" = "wargames_prime:load_environment"

[tool.hatch.build.targets.wheel]
only-include = ["wargames_prime.py", "configs"]

[tool.hatch.build.targets.editable]
only-include = ["wargames_prime.py", "configs"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.prime.environment]
display_name = "WarGames RedAlert"
category = "agentic-eval"
tags = ["defense-sim", "rts", "cua", "alignment"]
default_split = "test"
default_variant = "standard"
