[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layerbrain-wargames"
version = "0.1.8"
description = "Long-horizon real-time game environments for Prime Intellect Verifiers."
requires-python = ">=3.11"
authors = [{ name = "Layerbrain", email = "brain@layerbrain.com" }]
tags = ["defense-sim", "real-time", "games", "cua", "vision", "flight-simulator", "rts", "platformer", "rhythm", "fighting", "space-sim", "reinforcement-learning"]
dependencies = [
  "datasets>=4.6.1",
  "verifiers>=0.1.12",
  "wargames @ https://github.com/layerbrain/wargames/archive/refs/heads/main.zip",
]

[project.entry-points."verifiers.environments"]
"wargames" = "wargames_prime:load_environment"

[tool.hatch.build.targets.wheel]
only-include = ["wargames_prime.py", "configs"]

[tool.hatch.build.targets.editable]
only-include = ["wargames_prime.py", "configs"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.prime.environment]
display_name = "WarGames"
category = "agentic-eval"
tags = ["defense-sim", "real-time", "games", "cua", "vision", "flight-simulator", "rts", "platformer", "rhythm", "fighting", "space-sim", "reinforcement-learning"]
default_variant = "standard"
